Fixing white notification bar issue Fixing Settings Activity Changing back icon Changing logo and placeholder icons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:configChanges="orientation|screenSize"
             android:parentActivityName=".NewsActivity" />
         <activity
-            android:name="."
+            android:name=".SettingsActivity"
             android:parentActivityName=".NewsActivity" />
         <activity
             android:name=".AboutActivity"
