--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,8 @@
 apply plugin: 'com.android.application'
-repositories
-        {
-            maven {
-                credentials
-                        {
-                            username 'm.g.iriban@gmail.com'
-                            password 'AP8WdjDwLZa4LkfmnsS1d4yxfXmDn5STqt9nSz'
-                        }
-                url 'https://maven.be-bound.com/artifactory/bebound-local'
 
-            }
-        }
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
 
     defaultConfig {
         applicationId "com.firexweb.newsi"
@@ -34,15 +23,18 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.be-bound:sdk:1.1.0-beta6'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.be-bound:sdk:1.0.4'
+    compile 'com.android.support:design:25.0.1'
     compile 'com.github.rey5137:material:1.2.4'
 
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+
 }
-apply plugin: 'maven'
