--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,18 @@
 apply plugin: 'com.android.application'
 
+repositories
+        {
+            maven {
+                credentials
+                        {
+                            username 'm.g.iriban@gmail.com'
+                            password 'AP8WdjDwLZa4LkfmnsS1d4yxfXmDn5STqt9nSz'
+                        }
+                url 'https://maven.be-bound.com/artifactory/bebound-local'
+
+            }
+        }
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
@@ -7,7 +20,7 @@ android {
     defaultConfig {
         applicationId "com.firexweb.newsi"
         minSdkVersion 11
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -26,12 +39,12 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 
 
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.be-bound:sdk:1.0.4'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.be-bound:sdk:1.2.0-beta4'
+    compile 'com.android.support:design:25.1.0'
     compile 'com.github.rey5137:material:1.2.4'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
